Fixes suggested by Error Prone tool